style.css
@font-face {
	font-family: 'Bebas Neue';
	src:url('assets/fonts/BebasNeueRegular.woff');
	font-weight: normal;
	font-style: normal;
}
*{box-sizing: border-box; margin: 0; padding: 0;}

body{
	width:1024px;
	height:768px;
	overflow:hidden;
	background:#111;
	font-family: sans-serif;
}
.canvas {
	position: relative;
	width: 1024px;
	height: 768px;
}
.canvas-grid {
	position: absolute;
	inset: 0;
	height:768px;
	z-index:1;
	display: grid;
	grid-template-columns: 267px 1fr;
	grid-template-rows: 197px 1fr;
	gap: 24px;	
	padding:12px;
}
.card {
	background: rgba(255,255,255,0.1);
	backdrop-filter: blur(12px) saturate(150%);
	-webkit-backdrop-filter: blur(11px);
	border:1px solid rgba(255, 255, 255, 0.3);
	border-radius: 24px;
	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
	color: white;
	display: flex;
	align-items: center;
	justify-content: center;

}
.time-card .clock-digits {
	font-family: 'Bebas Neue', sans-serif;
	font-size: 96px;
	line-height: 0.95;
}
.time-card .date {
	font-size:20px;
	margin-top: 5px;
	font-family: 'IBM Plex Serif', sans-serif;
}
.calendar {
	grid-row: 2;
}
.inner-grid {
	display: grid;
	grid-template-columns: repeat(3,1fr);
	gap:12px;
}
.canvas-bg {
	height: 100%;
	width: 100%;
	background-image: url("images/rocco-one.jpeg");
	filter: blur(20px);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.time-card {
	flex-direction: column
}
.colon {
	animation: blink 1s step-end infinite;
}
@keyframes blink {
	50% {opacity:0;}
}

